Updated home page

--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>About - Louise Fong</title>
+		<meta name="description" content="Learn more about how my coding journey began.">
+		<title>About Louise Fong</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -116,7 +117,7 @@
 			<img
 				class="img-fluid lf-hero"
 				src="images/story-hero.png"
-				alt="My Story Logo"
+				alt="My Story Hero"
 			/>
 		</div>
 
@@ -124,9 +125,9 @@
 		<div class="container-fluid">
 			<div class="row">
 				<!-- Then -->
-				<div class="col-lg-6">
-					<h1>Then.</h1>
-					<p>
+				<div class="col-lg-6 ">
+					<h1 class="mx-5">Then.</h1>
+					<p class="mx-5">
 						Prior to my coding and SheCodes journey, I was working in the
 						finance sector and after three years, I knew it was time for a new
 						challenge. I have always had an interest in tech and loved problem
@@ -140,9 +141,9 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6">
+				<div class="col-lg-6 d-flex justify-content-center ">
 					<img
-						class="about-img img-fluid left-rounded"
+						class="about-img img-fluid  "
 						src="images/about1.JPG"
 						alt="Louise Fong"
 						width="500px"
@@ -153,16 +154,16 @@
 
 			<div class="row">
 				<!-- Now -->
-				<div class="col-lg-6 mt-5">
+				<div class="col-lg-6 d-flex justify-content-center mt-5">
 					<img
-						class="about-img img-fluid right-rounded"
+						class="about-img img-fluid "
 						src="images/about2.png"
 						alt="Louise Fong"
 					/>
 				</div>
 				<div class="col-lg-6 mt-5">
-					<h1>Now.</h1>
-					<p>
+					<h1 class="mx-5">Now.</h1>
+					<p class="mx-5">
 						After completing the SheCodes Basics course, I felt that I had
 						finally found a new passion and loved the satisfaction from solving
 						coding errors. As of right now, I am currently participating in the
@@ -179,8 +180,8 @@
 			<div class="row">
 				<!-- Next -->
 				<div class="col-lg-6 mt-5">
-					<h1>Next.</h1>
-					<p>
+					<h1 class="mx-5">Next.</h1>
+					<p class="mx-5">
 						Upon completion of the workshops and having upskilled - learning
 						CSS, HTML, Javascript, React and more technologies, I hope I am
 						equipped with the skills to break into the tech industry.
@@ -194,7 +195,7 @@
 
 				<div class="col-lg-6 mt-5">
 					<img
-						class="about-img img-fluid d-block left-rounded"
+						class="about-img img-fluid d-block"
 						src="images/about2.png"
 						alt="Louise Fong"
 					/>
