--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					title="Homepage"
 				>
 					<img
-						src="images/logo2.png"
+						src="images/logo.png"
 						alt="Louise Fong Logo"
 						class="img-fluid logo"
 					/>
@@ -119,7 +119,7 @@
 			<img
 				class="img-fluid lf-hero"
 				src="images/lf-hero.png"
-				alt="Louise Fong Logo"
+				alt="Louise Fong Hero"
 			/>
 		</div>
 
@@ -241,7 +241,7 @@
 				<div class="col-lg-6 p-0">
 					<img
 						class="img-fluid left-rounded mt-5"
-						src="images/matcha.png"
+						src="images/louise.JPG"
 						alt="Louise Fong"
 						style="max-width: 100%"
 					/>
@@ -257,7 +257,7 @@
 					<img
 						class="img-fluid right-rounded photo"
 						src="images/matcha.png"
-						alt=""
+						alt="Matcha Landing Page"
 						style="object-fit: contain"
 					/>
 				</div>
@@ -281,6 +281,7 @@
 					<a
 						class="btn justify-content-center mt-5"
 						href="/work.html"
+						title="My Work"
 						>My Work</a
 					>
 				</div>
@@ -290,7 +291,7 @@
 		<!-- Certifications -->
 		<div class="container-fluid">
 			<h1 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h1>
-			<div class="row justify-content-between">
+			<div class="row d-flex justify-content-center">
 				<div class="col-sm-3 mb-3">
 					<img
 						class="img-fluid"
@@ -309,14 +310,7 @@
 					<img
 						class="img-fluid"
 						src="images/plus-cert.png"
-						alt="SheCodes Plus Certificate"
-					/>
-				</div>
-				<div class="col-sm-3 mb-3">
-					<img
-						class="img-fluid"
-						src="images/plus-cert.png"
-						alt="SheCodes Plus Certificate"
+						alt="SheCodes Pro Certificate"
 					/>
 				</div>
 			</div>
@@ -326,7 +320,7 @@
 		<hr class="mt-5" />
 		<footer class="container text-center">
 			<h4 class="text-center">&lt Connect Code Create &gt</h4>
-			<div class="social-links d-flex justify-content-center mt-3">
+			<div class="social-links justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
 					title="Github Profile"
