--- a/work.html
+++ b/work.html
@@ -10,7 +10,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>My Work - Louise Fong</title>
+		<meta name="description" content="Take a look at Louise's coding">
+		<title> Louise's Portfolio </title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -117,7 +118,7 @@
 			<img
 				class="img-fluid lf-hero"
 				src="images/work-hero.png"
-				alt="My Work Logo"
+				alt="My Work Hero"
 			/>
 		</div>
 
@@ -139,6 +140,7 @@
 								<a
 									href="https://travel-to-santorini.netlify.app"
 									target="_blank"
+									title="Visit Santorini Landing Page"
 									>Visit Santorini Landing Page</a
 								>
 							</div>
@@ -164,6 +166,7 @@
 								<a
 									href="https://learn-about-matcha.netlify.app/"
 									target="_blank"
+									title="Visit Matcha Landing Page"
 									>Visit Matcha Landing Page</a
 								>
 							</div>
@@ -189,6 +192,7 @@
 								<a
 									href="https://weather-5days-forecast.netlify.app"
 									target="_blank"
+									title="Visit Weather App"
 									>Visit Weather App</a
 								>
 							</div>
@@ -214,7 +218,8 @@
 								<a
 									href="https://louise-fong-portfolio.netlify.app"
 									target="_blank"
-									>Visit Portfolio</a
+									title="Visit Online Portfolio"
+									>Visit Online Portfolio</a
 								>
 							</div>
 						</div>
@@ -239,6 +244,7 @@
 								<a
 									href="https://weather-5days-forecast.netlify.app"
 									target="_blank"
+									title=""
 									>Visit Weather App</a
 								>
 							</div>
