--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Contact Louise - Louise Fong</title>
+		<meta name="description" content="Reach out and let's code together.">
+		<title>Contact Louise </title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -138,6 +139,7 @@
 							class="contact-links"
 							href="mailto:lfong96@hotmail.co.uk"
 							target="_blank"
+							title="Email Louise"
 							>lfong96@hotmail.co.uk</a
 						>
 
@@ -146,6 +148,7 @@
 							class="contact-links"
 							href="https://www.instagram.com/wynn.codes"
 							target="_blank"
+							title="Visit Instagram Profile"
 							>@wynn.codes</a
 						>
 
@@ -154,7 +157,8 @@
 							class="contact-links"
 							href="https://www.linkedin.com/in/louise-fong"
 							target="_blank"
-							>@wynn.codes</a
+							title="Visit LinkedIn Profile"
+							>Louise Fong</a
 						>
 					</div>
 				</div>
