Updated content and responsiveness

--- a/about.html
+++ b/about.html
@@ -193,10 +193,10 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 mt-5">
+				<div class="col-lg-6 mt-5 d-flex justify-content-center">
 					<img
 						class="about-img img-fluid d-block"
-						src="images/about2.png"
+						src="images/about3.png"
 						alt="Louise Fong"
 					/>
 				</div>
