Added responsive certificate

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 				<div class="col-sm-3 mb-3">
 					<img
 						class="img-fluid"
-						src="images/plus-cert.png"
+						src="images/responsive-cert.png"
 						alt="SheCodes Pro Certificate"
 					/>
 				</div>
