--- a/work.html
+++ b/work.html
@@ -227,7 +227,7 @@
 					<h4 class="project-title mt-2 text-center">Responsive Portfolio</h4>
 					<p class="project-info text-center">
 						Built using HTML, CSS, Javascript, Github, Bootstrap and Flexbox to
-						create a responsive portfolio for the SheCodes Pro Final Project.
+						create a responsive portfolio for the SheCodes Responsive Final Project.
 					</p>
 				</div>
 
