--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 		</div>
 
 		<!-- Footer -->
-		<hr class="mt-5" />
+		<hr />
 		<footer class="container text-center">
 			<h4 class="text-center">&lt Connect Code Create &gt</h4>
-			<div class="social-links justify-content-center mt-3">
+			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
 					title="Github Profile"
