Added React cert

--- a/index.html
+++ b/index.html
@@ -313,6 +313,13 @@
 						alt="SheCodes Pro Certificate"
 					/>
 				</div>
+				<div class="col-sm-3 mb-3">
+					<img
+						class="img-fluid"
+						src="images/react-cert.png"
+						alt="SheCodes React Certificate"
+					/>
+				</div>
 			</div>
 		</div>
 
