--- a/about.html
+++ b/about.html
@@ -10,7 +10,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<meta name="description" content="Learn more about how my coding journey began.">
+		<meta
+			name="description"
+			content="Learn more about how my coding journey began."
+		/>
 		<title>About Louise Fong</title>
 
 		<link
@@ -125,7 +128,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<!-- Then -->
-				<div class="col-lg-6 ">
+				<div class="col-lg-6">
 					<h1 class="mx-5">Then.</h1>
 					<p class="mx-5">
 						Prior to my coding and SheCodes journey, I was working in the
@@ -141,13 +144,12 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 d-flex justify-content-center ">
+				<div class="col-lg-6 d-flex justify-content-center">
 					<img
-						class="about-img img-fluid  "
+						class="about-img img-fluid"
 						src="images/about1.JPG"
 						alt="Louise Fong"
 						width="500px"
-					
 					/>
 				</div>
 			</div>
@@ -156,7 +158,7 @@
 				<!-- Now -->
 				<div class="col-lg-6 d-flex justify-content-center mt-5">
 					<img
-						class="about-img img-fluid "
+						class="about-img img-fluid"
 						src="images/about2.png"
 						alt="Louise Fong"
 					/>
@@ -183,7 +185,7 @@
 					<h1 class="mx-5">Next.</h1>
 					<p class="mx-5">
 						Upon completion of the workshops and having upskilled - learning
-						CSS, HTML, Javascript, React and more technologies, I hope I am
+						CSS, HTML, Javascript, React and more technologies, I will beß
 						equipped with the skills to break into the tech industry.
 						<br /><br />
 						I chose to transition from finance to tech as I love the freedom for
