Added React Weather app

--- a/work.html
+++ b/work.html
@@ -10,8 +10,11 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<meta name="description" content="Take a look at Louise's coding">
-		<title> Louise's Portfolio </title>
+		<meta
+			name="description"
+			content="Take a look at Louise's coding"
+		/>
+		<title>Louise's Portfolio</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -205,6 +208,8 @@
 					</p>
 				</div>
 
+			
+
 				<!-- Project 4 -->
 				<div class="col-sm-4 mt-5">
 					<div class="image-container">
@@ -227,11 +232,37 @@
 					<h4 class="project-title mt-2 text-center">Responsive Portfolio</h4>
 					<p class="project-info text-center">
 						Built using HTML, CSS, Javascript, Github, Bootstrap and Flexbox to
-						create a responsive portfolio for the SheCodes Responsive Final Project.
+						create a responsive portfolio for the SheCodes Responsive Final
+						Project.
 					</p>
 				</div>
 
-			
+					<!-- Project 5 -->
+				<div class="col-sm-4 mt-5">
+					<div class="image-container">
+						<img
+							class="img-fluid hover-img"
+							src="images/react-weather.png"
+							alt="Responsive Portfolio"
+						/>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a
+									href="https://louise-react-weather.netlify.app/"
+									target="_blank"
+									title="Visit React Weather App"
+									>Visit React Weather App</a
+								>
+							</div>
+						</div>
+					</div>
+					<h4 class="project-title mt-2 text-center">React Weather App</h4>
+					<p class="project-info text-center">
+						Built using OpenWeather API and Unsplash API to set the app
+						background to the searched city for the SheCodes React Final
+						Project.
+					</p>
+				</div>
 			</div>
 		</div>
 
