--- a/work.html
+++ b/work.html
@@ -241,7 +241,7 @@
 						<img
 							class="img-fluid hover-img"
 							src="images/react-weather.png"
-							alt="Responsive Portfolio"
+							alt="React Weather App"
 						/>
 						<div class="overlay">
 							<div class="overlay-text">
